--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,9 +1,11 @@
-h1,h2,h3,h4,h5{
+h1,h2,h3,h4,h5,a{
     font-family: 'Poppins', sans-serif;
 }
 
-a,p{
+p{
     font-family:'Open Sans', sans-serif;
+    font-size:1rem;
+width:300px;margin:0 auto;
 }
 
 h1{
@@ -11,5 +13,3 @@ h1{
     font-weight: 700;
 }
 
-p{font-size:1rem;
-width:300px;margin:0 auto;}
