--- a/scss/main.css
+++ b/scss/main.css
@@ -1,10 +1,13 @@
 /* Primary Colors*/
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, a {
   font-family: 'Poppins', sans-serif;
 }
 
-a, p {
+p {
   font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
+  width: 300px;
+  margin: 0 auto;
 }
 
 h1 {
@@ -12,21 +15,11 @@ h1 {
   font-weight: 700;
 }
 
-p {
-  font-size: 1rem;
-  width: 300px;
-  margin: 0 auto;
-}
-
 body {
   padding: 0;
   margin: 0;
   background-color: #674baf;
-  overflow: hidden;
   color: #fff;
-}
-
-.bg-wrapper {
   max-width: 800px;
   height: 100vh;
   margin: 0;
@@ -40,7 +33,7 @@ body {
 }
 
 @media only screen and (min-width: 800px) {
-  .bg-wrapper {
+  body {
     min-width: 100%;
     height: 100vh;
     margin: 0;
@@ -52,46 +45,103 @@ body {
   }
 }
 
-.bg-wrapper header {
-  width: 100%;
+header .nav {
+  padding: 2rem 0 0 2rem;
 }
 
-.bg-wrapper header nav {
-  margin: 0 auto;
-  width: 100%;
-  background-color: rgba(255, 0, 0, 0.295);
+header .nav .logo {
+  width: 38%;
+}
+
+@media only screen and (min-width: 800px) {
+  header .nav {
+    padding: 5rem 0 0 5rem;
+  }
+  header .nav .logo {
+    width: 15%;
+  }
+  main .content {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 4rem;
+  }
+  main .content .image {
+    width: 60%;
+    padding: 15px 0 0 5px;
+  }
+  main .content .image img {
+    width: 70%;
+  }
+  main .content .text {
+    width: 30%;
+  }
+}
+
+main {
+  padding: 10px 35px 0 30px;
+}
+
+.content {
+  margin-top: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-  padding: .5rem 0 0 2.5rem;
-  height: 5rem;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.bg-wrapper header nav img {
-  width: 32%;
-}
-
-.bg-wrapper main {
+.content .image {
   height: auto;
-  padding: 2rem 2rem 0 2rem;
+  width: auto;
+  padding: 15px 0 0 8px;
 }
 
-.bg-wrapper main .text-info {
+.content .image img {
+  width: 100%;
+}
+
+.content .text {
   text-align: center;
+  margin: 2rem 0 3rem 0;
 }
 
-.bg-wrapper main .text-info .btn-wrap {
-  margin-top: 40px;
+.content .text .btn-wrap {
+  margin-top: 2rem;
 }
 
-.bg-wrapper main .text-info .btn-wrap .btn {
-  text-decoration: none;
+.content .text .btn-wrap .btn {
+  padding: 10px 75px;
+  border-radius: 15px;
+  border: none;
   color: #674baf;
-  background-color: #fff;
-  padding: 15px 100px;
-  border-radius: 25px;
+  background-color: #ffffff;
+  font-size: 13px;
+  text-decoration: none;
+  -webkit-box-shadow: 0px 3px 5px 0px #00000050;
+          box-shadow: 0px 3px 5px 0px #00000050;
+}
+
+footer .social-icons {
+  margin-top: .5rem;
+  padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+footer .social-icons i {
+  padding: 0px 5px;
 }
 /*# sourceMappingURL=main.css.map */
