--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,15 +1,20 @@
-h1,h2,h3,h4,h5,a{
+h1,h2,h3,h4,h5,a, button{
     font-family: 'Poppins', sans-serif;
 }
 
 p{
     font-family:'Open Sans', sans-serif;
     font-size:1rem;
-width:300px;margin:0 auto;
+    width:300px;margin:0 auto;
+    
 }
 
 h1{
     font-size:24px;
     font-weight: 700;
+}
+
+.lh-sm{
+    line-height: 1.5;
 }
 
