--- a/scss/main.css
+++ b/scss/main.css
@@ -1,5 +1,5 @@
 /* Primary Colors*/
-h1, h2, h3, h4, h5, a {
+h1, h2, h3, h4, h5, a, button {
   font-family: 'Poppins', sans-serif;
 }
 
@@ -13,6 +13,10 @@ p {
 h1 {
   font-size: 24px;
   font-weight: 700;
+}
+
+.lh-sm {
+  line-height: 1.5;
 }
 
 body {
@@ -46,90 +50,111 @@ body {
 }
 
 header .nav {
-  padding: 2rem 0 0 2rem;
+  height: 50px;
+  padding: 2em 0 0 3em;
 }
 
-header .nav .logo {
-  width: 38%;
+header .nav .logo img {
+  width: 35%;
 }
 
 @media only screen and (min-width: 800px) {
   header .nav {
-    padding: 5rem 0 0 5rem;
+    height: 75px;
+    padding: 3rem 0 0 3rem;
   }
   header .nav .logo {
-    width: 15%;
+    height: 50px;
+    width: 300px;
   }
-  main .content {
+  header .nav .logo img {
+    width: 65%;
+  }
+}
+
+.main-container {
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 2rem 1.7rem 1rem 1.7rem;
+}
+
+.main-container .image {
+  -webkit-box-flex: 100%;
+      -ms-flex: 100%;
+          flex: 100%;
+  height: auto;
+  margin: 10px 0 0 0;
+  padding: 0 10px;
+}
+
+.main-container .content {
+  -webkit-box-flex: 100%;
+      -ms-flex: 100%;
+          flex: 100%;
+  height: auto;
+  margin: 2rem 0;
+  text-align: center;
+}
+
+.main-container .content .text .btn {
+  width: 200px;
+  height: 40px;
+  margin: 1.5rem 0 0 0;
+  border: none;
+  border-radius: 50px;
+  font-size: 12px;
+  color: #674baf;
+  -webkit-box-shadow: 0px 0px 15px 0px #00000050;
+          box-shadow: 0px 0px 15px 0px #00000050;
+}
+
+.main-container .content .text .btn:hover {
+  background-color: #ee80e1;
+  color: #ffffff;
+}
+
+@media only screen and (min-width: 800px) {
+  .main-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin-top: 4rem;
   }
-  main .content .image {
-    width: 60%;
-    padding: 15px 0 0 5px;
+  .main-container .image {
+    -webkit-box-flex: 120%;
+        -ms-flex: 120%;
+            flex: 120%;
   }
-  main .content .image img {
-    width: 70%;
+  .main-container .content {
+    -webkit-box-flex: 100%;
+        -ms-flex: 100%;
+            flex: 100%;
+    text-align: left;
   }
-  main .content .text {
-    width: 30%;
+  .main-container .content .text {
+    padding: 0 7rem 0 2rem;
+  }
+  .main-container .content .text h1 {
+    font-size: 40px;
+  }
+  .main-container .content .text p {
+    margin: 0;
+    width: 100%;
+    line-height: 1.7;
+  }
+  .main-container .content .text .btn {
+    width: 175px;
+    font-size: 14px;
   }
 }
 
-main {
-  padding: 10px 35px 0 30px;
-}
-
-.content {
-  margin-top: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.content .image {
+footer .social {
   height: auto;
-  width: auto;
-  padding: 15px 0 0 8px;
-}
-
-.content .image img {
-  width: 100%;
-}
-
-.content .text {
-  text-align: center;
-  margin: 2rem 0 3rem 0;
-}
-
-.content .text .btn-wrap {
-  margin-top: 2rem;
-}
-
-.content .text .btn-wrap .btn {
-  padding: 10px 75px;
-  border-radius: 15px;
-  border: none;
-  color: #674baf;
-  background-color: #ffffff;
-  font-size: 13px;
-  text-decoration: none;
-  -webkit-box-shadow: 0px 3px 5px 0px #00000050;
-          box-shadow: 0px 3px 5px 0px #00000050;
-}
-
-footer .social-icons {
-  margin-top: .5rem;
   padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -137,11 +162,25 @@ footer .social-icons {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -ms-flex-line-pack: center;
-      align-content: center;
 }
 
-footer .social-icons i {
-  padding: 0px 5px;
+footer .social .icons i {
+  padding: 5px;
+}
+
+footer .social .icons i:hover {
+  color: #ee80e1;
+}
+
+@media only screen and (min-width: 800px) {
+  footer .social {
+    padding-right: 5rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
 }
 /*# sourceMappingURL=main.css.map */
