--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,7 @@ body{
     margin:0;
     background-color: $violet;
     color:#fff;
+    
 
     max-width:800px;
     height:100vh;
@@ -17,6 +18,7 @@ body{
     background-size: contain;
     transition:  .2s ease;
 
+    
     @media only screen and (min-width:800px){
         min-width:100%;
         height:100vh;
@@ -29,99 +31,137 @@ body{
     }
 
 }
-
-
 header{
-    .nav{
-        padding:2rem 0 0 2rem;
-        .logo{
-            width:38%;
-        }
+.nav{
+    height:50px;
+    
+    padding:2em 0 0 3em;
+    
+    .logo{
+        
+        
+        img{width:35%;}
     }
 }
 
 @media only screen and (min-width:800px){
-    header{.nav{
-       padding:5rem 0 0 5rem; .logo{width:15%;}
-}
+
+    .nav{
+        height:75px;
+        
+        padding:3rem 0 0 3rem;
+        .logo{
+            height:50px;
+            width:300px;
+           
+
+            img{ width:65%;}
+        }
+    }
+
 }
 
-    main{.content{
-        flex-direction: row;
-        justify-content:center;
-        margin-top:4rem;
-        .image{
-            width:60%;
-            padding:15px 0 0 5px;
-            img{
-                width:70%;
+}
+
+.main-container{
+    
+    flex-wrap: wrap;
+    
+    padding:2rem 1.7rem 1rem 1.7rem; 
+
+    .image{
+        
+        flex:100%;
+        height:auto;
+        margin:10px 0 0 0;
+        padding:0 10px;
+        
+    }
+
+    .content{
+        
+        flex:100%;
+        height:auto;
+        margin:2rem 0;
+        
+        text-align: center;
+
+        .text{
+            .btn{
+                width:200px;
+                height:40px;
+                margin:1.5rem 0 0 0;
+                border:none;
+                border-radius:50px;
+                font-size:12px;
+                color:$violet;
+                box-shadow: 0px 0px 15px 0px #00000050;
+                
+            }
+
+            .btn:hover{
+                background-color: rgb(238,128,225);
+                color:#ffffff;
             }
         }
 
+    }
+
+
+}
+@media only screen and (min-width:800px){
+    .main-container{
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+        
+        .image{flex:120%;}
+        .content{flex:100%;text-align: left;
+           
         .text{
-            width:30%;
-        }
-    }}
+            padding:0 7rem 0 2rem;
+                h1{
+                    font-size:40px;
+                }
 
+                p{margin:0;width:100%; line-height:1.7;}
+                .btn{
+                    width:175px;
+                    font-size:14px;
+                }
+            }
+        }
+    }
 }
 
-main{
-    padding:10px 35px 0 30px;
-   
-}
-.content{
-    margin-top: 2rem;
-    
-    display:flex;
-    flex-direction: column;
-
-    .image {
-        height:auto;
-        width:auto;
-        padding:15px 0 0 8px;
-        
-        
-        //background-color:blue;
-
-        img{
-            width:100%;
-        }
-    }
-    
-    
-
-    .text{
-        text-align: center;
-        margin:2rem 0 3rem 0;
-        .btn-wrap{
-    margin-top:2rem;
-
-        .btn{
-            
-            padding:10px 75px;
-            border-radius: 15px;
-            border:none;
-            color:$violet;
-            background-color: #ffffff;
-            font-size: 13px;
-            text-decoration: none;
-            box-shadow: 0px 3px 5px 0px #00000050;
-        }
-    }
-    }
-
-}   
 
 footer{
-    .social-icons{
-        margin-top:.5rem;
+    .social{
+        
+        height:auto;
         padding:1rem;
         display: flex;
         justify-content: center;
-        align-content: center;
-        
-        i{
-            padding:0px 5px;
+        .icons{
+            
+            i{
+                padding:5px;
+            }
+
+            i:hover{
+                color:rgb(238,128,225);
+            }
+
+        }
+    }
+
+    @media only screen and (min-width:800px){
+        .social{
+            padding-right:5rem;
+            display: flex;
+            justify-content: flex-end;
+            
         }
     }
 }
+
